# ChangeLog for dev-libs/xmlrpc-c
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.150 2013/06/30 18:08:07 ago Exp $

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  Stable for s390, wrt bug #471912

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  Stable for sparc, wrt bug #471912

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  Stable for ia64, wrt bug #471912

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  Stable for alpha, wrt bug #471912

  16 Jun 2013; Vicente Olivert Riera <vincent@gentoo.org>
  xmlrpc-c-1.32.05-r1.ebuild:
  ppc ppc64 stable : bug #471912

  12 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  x86 stable wrt bug #471912

  10 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  amd64 stable wrt bug #471912

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  Stable for sh, wrt bug #471912

  06 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Reassigning due to Zlogene became Gentoo developer, remove proxy maintainers
  herd

  02 Jun 2013; Markus Meier <maekke@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  arm stable, bug #471912

  31 May 2013; Jeroen Roovers <jer@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
  Stable for HPPA (bug #471912).

  27 May 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Assign new maintainers

*xmlrpc-c-1.32.05-r1 (27 May 2013)

  27 May 2013;  <qnikst@gentoo.org> +xmlrpc-c-1.32.05-r1.ebuild:
  allow tools to be used in xmlrpc-c-1.32.05 (bug #460730)

  14 Mar 2013; Jeroen Roovers <jer@gentoo.org> xmlrpc-c-1.32.05.ebuild:
  Stable for HPPA (bug #457298).

  08 Mar 2013; Jeroen Roovers <jer@gentoo.org> xmlrpc-c-1.32.05.ebuild:
  Fix typo.

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05.ebuild: