@@ -1,28 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX xmlrpc-c-1.32.05-Wimplicit.patch 593 SHA256 9a39a6d1c01c8fe1dc2d6673d35da13643d805eb8d717112735b7a7c75768d44 SHA512 e39c694f8fed9f2b55592043cdc6776260980e0e6751362c15026f82c2a777e37183f6a7d42e7e2ed36b4fada5124f3fd3c7d6104dc447ef494f4bf82e5dfe04 WHIRLPOOL 6c239ad331ce221dedc59b54ac96b96490d00f74e7e39d64f380490fafd508976a22fbab2afc69a536e1e5f7e2532cea75aab28c26a546e701bd621bc3a6688f
-DIST xmlrpc-c-1.28.03.tar.gz 751969 SHA256 6bc078a7fa7ea41bce40df490b0a670f9014678566acef3cd1ea0ce605fee422 SHA512 e729cad61de76ab38e234e3f2db0c6a8a45423fae992a7fe0c6e6e9f887fc89d08104ce1c7b4920a2f8089f919daf29cc2174a4951dd6868aeb838ee8a30abff WHIRLPOOL 3440aed117feeda88f2feaeac39869c7d3dc9bce76cee5ab1f0a989ccad31921e93ad1ed0d1590e415c05079d6c0951206f64010564c92afa356d1ef457be3d6
 DIST xmlrpc-c-1.32.05.tar.gz 769040 SHA256 cefd25dcb90556c90358cb44013a644f1aeafd37d2e18be37e66a3355b5ae0d2 SHA512 40813ad97010684e346ce4f286d9d7314547572f8681cf99d4c3c36cb7aa38b1cb72b84d63ab46e44282dc2bd95b85dbb022e3039700caa939469c6f7bf08d1f WHIRLPOOL 1e6ebbc1b3caa78e1e22210d81a61b74d71f61a33d1ea97f96ef250a5277d3cbe6d532d286bed8bb57e1ba4ccb54fd38bdf51f8d3bdbba00225bb5678de17292
-EBUILD xmlrpc-c-1.28.03-r1.ebuild 2760 SHA256 3645abf9b5507e201d3d48e981557500142241b02f416653ead998ea8d00edc3 SHA512 58c356c2657eac39284e4a870904536628379ac5160928739e600b11d921af73ed4f3fd22a8b6299bc83a64d5086238cfbfd77231b56ed0ed6301f00bff6e7d2 WHIRLPOOL ec7e4dd0f7ec6db08125c7b4034211d6c1c32987cdebaf9023e9b854ffdf18fb85be4e96651a3271acffb7a6e83bc5b27f0482202799b4c2145fca00b544de03
 EBUILD xmlrpc-c-1.32.05-r1.ebuild 3069 SHA256 f4be84f1756c8b7697360aa3ffd46e16abc5d6dfea143c2dba4e64e194d187a0 SHA512 d4ae32b7612d12b4fde46d7f396491171d992be5c036c389024a8da20e789dfbd77a5d12ca0a7dcbb0ab78239d19269c4d1b40493a00656f2a0abb976c53909e WHIRLPOOL b4791f71cef6ce1e799f6181f6b16fb663f1d50d50c2d83ae602359f8228dd6aa8302ffc4936052a85af8fdb3099559f4018f749dc39c9300779cdee07fcca9c
-EBUILD xmlrpc-c-1.32.05.ebuild 2907 SHA256 358f254ecbfdcb6b9dcb23181a1d94f3c883b643fd013d2f2d33ef60fb4a2f17 SHA512 210ea0656425aa9b1c14d9e8aee5646ea20b470f793d79ed1f32bf6ee0b8c2431319465d1589d83aa3277c39a5e2618f66d690323f9db24ed71008512565c61a WHIRLPOOL bec664433edfb37fab3a7dee01af7e570abc824350b4373f3d8d4810ca1daec471554495d70455c9aaad01a16e0716a8cdbe08503e7c0a9b60e1fa51b515b22a
-MISC ChangeLog 23235 SHA256 220ab8e380474a2c3a6c241b7162bbfe5920745d20fdcb6b1c7621f91d67b093 SHA512 588c2db26d51dfc13ef8148992c96e985e2354b9be8571388b12723501e491988e2d1d949ce9c4f738895d1491209a8adb7167eeb78fbbdab47e429a466ef85b WHIRLPOOL 6272bcbdf30365458108f97ae00977e65f84396e3ae1d9ebb64b07cdc7a39a55bf140cda2d5fbb4b9a23c45cf640876acd332c0e5c218f40142eda8ddeb40207
+MISC ChangeLog 23358 SHA256 1e354c5f89663bcd2a6083385d708d4b77ad6af21af6831b30929540b2d631ab SHA512 6901a842498c44b45079c788c744af70725ddba8525151c910c3e793ca4fda809d9927849085e46c90d40c8f089db314161480546d130327cfb3fc0b7955b230 WHIRLPOOL bfdadd8f6b4dbffae0b04fd1439268f54cd0b3f8a77ba848b3a3de820761e7e35805c11f10904e8a67347f25a0ed6cce8b2938832c84e82479343de57afb9828
 MISC metadata.xml 671 SHA256 531ee5a34812e8c17d0786aebb7da992ec0c79c4d7c03f80b204fdd5e7013011 SHA512 2636519b3565a53daded955eb79dd8546738860a7fbb2ecc4d4a793c19d796bb54578bbb1fe7b84cae39980c875d5adef81e64ddb59d3852617f0bd13816a5f9 WHIRLPOOL 90aaf5ba34d0ad054a488d9724e5d3717752357e2ab873fb2dbbc2a6c095f299c6efb158245ea5a9b75b668fbe1b7d743fc95a2eca296a1e3fa8e329b67d33b5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR0HNTAAoJELp701BxlEWfwRwP/2hYVs56JDlQY311uMIzMLmQ
-6cbl4aEbEmIvCi5XZw7F711c+7A/qXGmjzXYoO2dRx2xYGbu3mb7yk7JaBGLredz
-vTFVs+aMU8zn5z+shLM6X5lz9Xhp30sIxQ4ZrEzUUGleqmQSSxOxLfCqp8hIOy27
-TNyFll8aZ/A4pk3we4jpv2CsSkdLzDr0TuagOqiymMp7GwC+lrbqc+bf5/6hD2yG
-5eyZUTfM/AgP/5pLVWCDejUwuHx+zrnAywjM6M7toGGCcO1ceVvsMN1HLwRdQmOV
-cYHWzrL1/t+FS4oviDzpuiAJS4FdZsghW6fzEBZFHy+UbsCzpgnLXQKIenWGZsNP
-s4pAkwV6WMs82X1HuTfAWMeDed+Ot+9ubMGvkWCIFQINJ5EwkmWp52I7DaXGuBBh
-Hc89XGwzO1K7i2jZQ3dOOuegn9f8IB5uun9o0xROCocF/y3ln8VeYj/wAbpSanWs
-psIG+E5l2DGYrNCjFOjZ8qS8KlVa2MCo5VJtcVoB8j6wqzS2QsA5NZB+rUwlwVJr
-RFheM7zpSPzg6DBZlgp1ckwD1deNxfszQkxXzigdzQcN4uyVVmrZzZha5jTxadpo
-K9Hbl3yW6RGxzHNnEHTQafN5KRo/9tf5J5FJPmw5qDEqimouvg9nFLiQ3EaI3527
-9IYxj+FIq3hWyt1pvYXD
-=5kU2
+iJwEAQEIAAYFAlHXkVUACgkQG9wOWsQutdZBtgQAmbd3xw1gIbPJp/0bGHkCOcBu
+qO4JVgDGgqaVW1zSHIsN+mwPfeCbu3EVwfJyWxAZPJOGY4KZ78bgoTa/kkXImk/c
+csc1jcpuk54bUavjezorUaYACVQCtBwab13ZE9/vBnEoZw/D7h4gu4/mxVn5vQHH
+aMeyB5SbLzua0gO/68c=
+=NEM5
 -----END PGP SIGNATURE-----
