@@ -5,24 +5,18 @@ AUX giflib-4.1.6-gif2rle.patch 763 SHA256 f8345a380026827c10eca91ce391c51de0cccb
 AUX giflib-4.1.6-giffix-null-Extension-fix.patch 693 SHA256 fbbe6cdb82837b5791e9743f1dc2f55ba2c6c16cc799f894571815750ea50bb5 SHA512 9006c85529735a84afaddddbb06b25cb2b7eff64574edea693d75171c6b2bb7a666e498920a9abca2b28290e4c601b6eb6eecc6ea1b0e6b8602fd4a55863338f WHIRLPOOL fb37d5cc0474e9f6041136eb7ac9da94683406c9234f2d24593d1a38fa646f88aea51b8b8561cdec977ebd98fe0c11e5f70c83a70b530aaaae091cce575d256c
 DIST giflib-4.1.6.tar.bz2 506050 SHA256 e1c1ced9c5bc8f93ef0faf0a8c7717abf784d10a7b270d2285e8e1f3b93f2bed SHA512 f47954218ed7d3415cc195a1031a688fcb7dd2bc2b394491830e6b5f5332903ed7c4433b795cd3da9ac53bfc969fe94bec2a4e66b15c0385c732c01b1b7e5057 WHIRLPOOL ee5c3c606dcc2a56151cfd8f9ec33ce6071fb433969df92fae5d51def5bdf974f6dcdb1acf7d83234967f0f5fd3822702822e1e6b274c2e6c39e3e324b54fe09
 DIST giflib-5.0.4.tar.bz2 629190 SHA256 7c78b2834256fcb7ff703d0d2153f965dc296f8e059de1fc635aba1042b00bba SHA512 057c7754a7169a8690d03b39e084626355e907dcc0644473da1ebe6c6f36c7d991a477c0b22d258bdbceafe473bab585bca57fa9bf4d9c0c4d7ebbe920bea83f WHIRLPOOL 91aad640c43581b9ff0daef2e8e909414419451590bbc372943275558724513cd3b1f081dc202498670c7d18cb22b48e067c79a157da6f597c8c56c737e07231
-EBUILD giflib-4.1.6-r2.ebuild 1383 SHA256 db258de14425a9236b4d2405dac516be7dcb56ddf3402a7ec217c3522348e109 SHA512 dc5c98f763282df8142e166c62aa81a991d6387185486fab2f9920f1da48c68b2c74d9fefed45ea16292dfaf24e823f19aad65d4a79ee61fc9cb0823b708233a WHIRLPOOL b96f409963569a7b5016c910b555bc8327b64875727dad0b69879a44e7859432000b1630a12d7d8438f24f59a90c9726c4c1a5f5f1a3f5b5332fa2f817cd69aa
-EBUILD giflib-5.0.4.ebuild 880 SHA256 195b6a6bce828fe2feacb47d9b4b002f3cdab0e28714d71704fdf797b41990b9 SHA512 f1b05a3401d08c85f05faf6be83784ad2fe40d203bef5f0e9b2aa7bd17c1a0d57352501df95e07d60f68ba22d87e3c721139b5f019d4a3a69cba325288b0c936 WHIRLPOOL 88f1e21193c1a2724e0b3c5fe34f9ec4d3a906a592a573086d1de61199903af4b5935853816358c0d81dc4b2a9721ce563a18df4191675a3f25a3b6d34c8a86e
-MISC ChangeLog 8446 SHA256 4d4ca3b6b1baf55bd9d714634b22489076474e3840f2426c0d41d68fc6ab4712 SHA512 c01742674454b2c1184924a21b901164bca6a56a3f4e8e2113e16c182feeb25f96537c8aa9ba40a2c842cd08094fbd5751194b1d5080db0eebaebc66de1f6055 WHIRLPOOL dce48f39f8cac9786d435ba01bae2b868e69299b283f534d48c8d44e7c0e7d4d161dac73a9c01b92964a87e7b92f7348fd03ea1fb4418ebfe37228273fe7b5f9
+EBUILD giflib-4.1.6-r2.ebuild 1492 SHA256 dac47abcf0ef7cedc9d5f6a84d6a003d502c0d0ea9945d6e4cabe345936c422a SHA512 419d642faac07ee65d21f4761123a25333f8c34f8ff4aaba15cddd9a74154142fb333e474b137d88c0f70ae27b3a5a689d2d9b527421011d91aed631dc9079fc WHIRLPOOL cc7c9bb2a4941ccf41794cc2349f9fb8221261fbae3abd3fd94725b0883ebd3078f754c2c105221976d373c26c32f24a2881f5ecceaa4bec9bb8dabded6722a4
+EBUILD giflib-5.0.4.ebuild 991 SHA256 1ffbcda536f411ebf1058fa10175958f257980e0ae47b580b1295990bcd9893f SHA512 10491dc9d7a76632e97e1cdcdf0d9e85a95e3389c86548a2491bfefd017c610ea69d923db37ddb0d523a202a83eaec787ef03db3b83072387305483545ebd920 WHIRLPOOL 07576ef87feb1d6983ef9736b3870fa21de3d73a5355085dd7d207840a74119b7236846a6751c05cc4bf1baaba50ea0ebd52830de0f887934fba8f0a82c35d66
+MISC ChangeLog 8572 SHA256 ad410c9f4c913c276d9626c06bd179a0933b64fd49e5a39fe13ca3069c1b2781 SHA512 5809a94811353d4b08a1113bd6202e6b02e84761956b606d036865106c42145da0e702c78ea316e899f5822c63e526bfa8f7bba62f0671cb1ba7b2161c9310fb WHIRLPOOL 604b09904504e7430e035bc023961a31dea6466ffb8851501058ea4f7fcba6be5b19c873e4ff021af3748a12895df96f29c1bbcd69ad8219c3768e7a82457806
 MISC metadata.xml 262 SHA256 37a2fa1d7fe15de221a57c2528b6073d06fd6c9da64819e6bb9267b51dde0f2d SHA512 5dd2e307fa1b22920fa9c2aafa105a3a7fe190ff4d2af4da47c400c7e84d820d3ea6108230f763a802e928379083ef2ed854de71978718f3fda39dd43cfddf0c WHIRLPOOL c7f717f63b135da337899c79efef09c11175b7135ac8c482ca44f93a17a8221832e4d569a61f76a159ca4ad9cd3a0b774fa071dfee583df678c7d0847cc42a50
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRPzphAAoJELEHsLL7fEFW/RcP/3ZyFMiXGmRL1WrtTQWFPoiU
-IKZQn0PIaaXCp7+5J4qcdBIyRRIXDesS3OhdJq2MQX2YAjQQTkRl8Xq5heVK9zXo
-IrR9nmUHRXTihXmG7wTpfdOTdyTlWxSBW1JgnYPdXN/hnLZ+xn26+WaWuwulBUyO
-AmV177Jl9qpMXaPj1DsleG8SDlZF9g37BRPaNeEkGPGh80VX8EFIXctOSakFcOFT
-GbftV0IRzsLqwUmTmgp8GqKHQlhCzTMD8N3ACQ8coFp+ri/AJpS45HNWmMcFXPzK
-pNy4b4jiVaF51GBFHWTL3PDnBoDTTL75ZvFpllFz4K+tbBbAFD17Mm1Y++hORmER
-1KQ8s3NA3Wv6WTMSOCn0gcuprvUQ7zbsJ8852OcO5TYPJm7+YRYegDOJMVMSCIJ0
-nTkARa/3t+RM5iAGNRA/z05QWiMlBwnPYwn5awnNsK6dZR8DaC1f9QHxDLxFiXYK
-uvpZb6E2tRkc3wd3QofIW9Npvdcn/b4LvvrWQRn8+lgGW0MkS9+NOGp+H4PUqHAF
-mecDy+VRulN578oQA7iB51OmED4fVx6wo202zo6uV8xYT+r8bAgzqnmz26SzJIuP
-hnjqbR+gVmKEy20s6eRoEiQG3sQhrQQkjMCoCqVyNLR+FtQ0+vO+ehTro3FJ7kVN
-ahyLOBQIKIx7NhqFLp95
-=b7Nw
+iQEcBAEBCAAGBQJR150UAAoJEOeBhlrCAAWGH4oH/1b2RHEYzroTb/igcBw13hWr
+jy/fOigjd4Hh8aT2hSgwR0ESo6FQO3qmA1Bn4avCxhv0+Mz9nTwf+rI2ORpxYDRJ
+en7XxP7rUBmIZ/TrdsPf3lSb9bXYGP5mCixYhCCyX2s/6h2HT2lefc5qI4xG3gYW
+W4lN8QuzfoA/NfNPmLm2CBv0nl7qeU0TMZ1mPpdj7nqQNIxBRqX5EQjllTdbX3zc
+n/UvDqVDohdZawSHxEtsdOcA7dmLtfWJ3dyxzbogeNOPnZ4bHWHWt1APN5h4MOSK
+9D8rmRvt6ht3oFAhpMB7QL3tUH6qh3/5F5ul9PhtjdMv9KIEesqYpcRqpBmuUT0=
+=VELC
 -----END PGP SIGNATURE-----
