@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure prepare setup test
-DEPEND=sys-libs/ncurses sys-libs/readline curl? ( net-misc/curl ) libxml2? ( dev-libs/libxml2 )
-DESCRIPTION=A lightweigt RPC library based on XML and HTTP
-EAPI=4
-HOMEPAGE=http://xmlrpc-c.sourceforge.net/
-IUSE=abyss +cgi +curl +cxx +libxml2 static-libs threads
-KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~x86-fbsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
-LICENSE=BSD
-RDEPEND=sys-libs/ncurses sys-libs/readline curl? ( net-misc/curl ) libxml2? ( dev-libs/libxml2 )
-REQUIRED_USE=test? ( static-libs abyss curl cxx )
-SLOT=0
-SRC_URI=http://dev.gentoo.org/~maksbotan/xmlrpc-c-1.32.05.tar.gz
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=8b8d69e8051fd52cabb2784dd7efa250
