@@ -4,10 +4,10 @@ DESCRIPTION=Library to handle, display and manipulate GIF images
 EAPI=4
 HOMEPAGE=http://sourceforge.net/projects/giflib/
 IUSE=rle static-libs X
-KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=MIT
 RDEPEND=X? ( x11-libs/libXt x11-libs/libX11 x11-libs/libICE x11-libs/libSM ) rle? ( media-libs/urt )
 SLOT=0
 SRC_URI=mirror://sourceforge/giflib/giflib-4.1.6.tar.bz2
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=a72b4ab82ab430c6d9f03a802351376f
+_md5_=77133772f3013742de60b4a9576d8b0a
