@@ -7,4 +7,4 @@ LICENSE=MIT
 SLOT=0
 SRC_URI=mirror://sourceforge/giflib/giflib-5.0.4.tar.bz2
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9a7a32eabceb86f298c62cf284772aec
+_md5_=f7f65761833839ef8db9290d91fcb104
