@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/giflib
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/giflib/ChangeLog,v 1.68 2013/03/12 14:20:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/giflib/ChangeLog,v 1.69 2013/07/06 04:29:00 ottxor Exp $
+
+  06 Jul 2013; Christoph Junghans <ottxor@gentoo.org> giflib-4.1.6-r2.ebuild,
+  giflib-5.0.4.ebuild:
+  added prefix keywords
 
   12 Mar 2013; Mike Frysinger <vapier@gentoo.org> giflib-5.0.4.ebuild:
   Drop epunt_cxx as we no longer need it here.
