@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/xmlrpc-c
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.150 2013/06/30 18:08:07 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.151 2013/07/06 03:17:44 zlogene Exp $
+
+  06 Jul 2013; Mikle Kolyada <zlogene@gentoo.org> -xmlrpc-c-1.28.03-r1.ebuild,
+  -xmlrpc-c-1.32.05.ebuild:
+  drop old
 
   30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> xmlrpc-c-1.32.05-r1.ebuild:
   Stable for s390, wrt bug #471912
